# whisper-cli

./: pyproject.toml
whisper_cli/: env.py  main.py
