[project]
name = "whisper-cli"
version = "0.0.5"
description = "A command-line interface for transcribing and translating audio using OpenAI's Whisper API"
authors = [{ name = "Vatsal", email = "vatsalaggarwal@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "typer[all]>=0.7.0,<0.8",
    "openai>=0.27.0,<0.28",
    "toml>=0.10.2,<0.11",
    "click<8.2.0",
]

[project.scripts]
whisper = "whisper_cli.main:app"

[tool.hatch.build.targets.sdist]
include = ["whisper_cli"]

[tool.hatch.build.targets.wheel]
include = ["whisper_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
